# lunita-mini

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: ejemplo-chat-simple.py
examples/01_chat_consola_basico/: README.md  main.py
examples/02_chat_asincrono_streaming/: README.md  main.py
examples/03_lectura_tarot/: README.md  main.py  requirements.txt
examples/04_web_api_fastapi/: README.md  main.py  requirements.txt
lunita/: __init__.py  cliente.py  configuracion.py  constantes.py  historial.py  sesion.py  sesion_asincrona.py  sesion_base.py
test/: test_historial.py
