[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lunita-mini"
version = "0.1.0"
description = "¡Versión básica de Lunita!"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "tuysh", email = "angelmacloviomorales@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["groq>=1.0.0"]

[dependency-groups]
test = ["pytest >= 9.0.2"]

[project.urls]
"Homepage" = "https://github.com/Tuysh/lunita-mini/"

[tool.setuptools.packages.find]
include = ["lunita*"]
